src/snapshots/cornercase__ui__tests__workspaces_column__renders_the_workspaces_of_the_active_project.snap
---
source: src/ui.rs
expression: render(&with_workspaces(Some(0))).backend()
---
" ▄▀▀▀ cornercase                                         │  no tab open                             "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)               │  login                  │                                          "
"                               │  ▌ claude               │                                          "
"  + new project                │    nvim                 │                                          "
"                               │    + tab                │                                          "
"                               │                         │                                          "
"                               │  ↓ 2 more               │                                          "
"                               │  + new workspace        │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
